fix docker.sock volume

--- a/.drone.yml
+++ b/.drone.yml
@@ -9,3 +9,8 @@ steps:
     path: /var/run/docker.sock
   commands:
   - docker ps -a
+
+volumes:
+- name: dockersock
+  host:
+    path: /var/run/docker.sock
