--- a/.drone.yml
+++ b/.drone.yml
@@ -8,8 +8,9 @@ steps:
     - name: dockersock
       path: /var/run/docker.sock
   commands:
-    - export VERSION="${DRONE_BRANCH}-${DRONE_COMMIT_SHA:0:8}"
-    - docker build -t sav4enk0r0man/go-api:"$${VERSION}" .
+    - docker build -t sav4enk0r0man/go-api:"${VERSION}" .
+  environment:
+    VERSION: ${DRONE_BRANCH}-${DRONE_COMMIT_SHA:0:8}
 
 volumes:
 - name: dockersock
