--- a/.drone.yml
+++ b/.drone.yml
@@ -8,7 +8,7 @@ steps:
     - name: dockersock
       path: /var/run/docker.sock
   commands:
-    echo ${VERSION}
+    - echo "${VERSION}"
 #    - docker build -t sav4enk0r0man/go-api:"${VERSION}" .
   environment:
     VERSION: ${DRONE_BRANCH}-${DRONE_COMMIT_SHA:0:8}
