--- a/.drone.yml
+++ b/.drone.yml
@@ -9,6 +9,7 @@ steps:
       path: /var/run/docker.sock
   commands:
     - echo $${VERSION}
+    - echo "version ${DRONE_BRANCH//\//-}-${DRONE_COMMIT_SHA:0:8}"
 #    - docker build -t sav4enk0r0man/go-api:"${VERSION}" .
   environment:
     VERSION: "$${DRONE_BRANCH}-$${DRONE_COMMIT_SHA}:0:8"
