--- a/.drone.yml
+++ b/.drone.yml
@@ -8,11 +8,10 @@ steps:
     - name: dockersock
       path: /var/run/docker.sock
   commands:
-    - echo $${VERSION}
-    - echo "version ${DRONE_BRANCH//\//-}-${DRONE_COMMIT_SHA:0:8}"
+    - echo "${VERSION}"
 #    - docker build -t sav4enk0r0man/go-api:"${VERSION}" .
   environment:
-    VERSION: "$${DRONE_BRANCH}-$${DRONE_COMMIT_SHA}:0:8"
+    VERSION: "${DRONE_BRANCH//\//-}-${DRONE_COMMIT_SHA:0:8}"
 
 volumes:
 - name: dockersock
