--- a/.drone.yml
+++ b/.drone.yml
@@ -8,8 +8,7 @@ steps:
     - name: dockersock
       path: /var/run/docker.sock
   commands:
-    - echo $${VERSION}
-    - docker build -t sav4enk0r0man/go-api:"${VERSION}" -t sav4enk0r0man/go-api:latest .
+    - docker build -t sav4enk0r0man/go-api:$${VERSION} -t sav4enk0r0man/go-api:latest .
   environment:
     VERSION: ${DRONE_BRANCH//\//-}-${DRONE_COMMIT_SHA:0:8}
 
