--- a/.drone.yml
+++ b/.drone.yml
@@ -9,8 +9,8 @@ steps:
     - name: dockersock
       path: /var/run/docker.sock
   commands:
-    - docker build -t savchenkoroman/go-api:$${VERSION} -t savchenkoroman/go-api:latest .
-    - docker push savchenkoroman/go-api:$${VERSION}
+#    - docker build -t savchenkoroman/go-api:$${VERSION} -t savchenkoroman/go-api:latest .
+#    - docker push savchenkoroman/go-api:$${VERSION}
     - docker push savchenkoroman/go-api:latest
   environment:
     VERSION: ${DRONE_BRANCH//\//-}-${DRONE_COMMIT_SHA:0:8}
