--- a/.drone.yml
+++ b/.drone.yml
@@ -3,17 +3,26 @@ name: default
 
 # build step
 steps:
-- name: build
-  image: docker:dind
-  volumes:
-    - name: dockersock
-      path: /var/run/docker.sock
-  commands:
-#    - docker build -t savchenkoroman/go-api:$${VERSION} -t savchenkoroman/go-api:latest .
-#    - docker push savchenkoroman/go-api:$${VERSION}
-    - docker push savchenkoroman/go-api:latest
-  environment:
-    VERSION: ${DRONE_BRANCH//\//-}-${DRONE_COMMIT_SHA:0:8}
+  - name: build
+    image: docker:dind
+    volumes:
+      - name: dockersock
+        path: /var/run/docker.sock
+    commands:
+  #    - docker build -t savchenkoroman/go-api:$${VERSION} -t savchenkoroman/go-api:latest .
+    environment:
+      VERSION: ${DRONE_BRANCH//\//-}-${DRONE_COMMIT_SHA:0:8}
+
+  - name: publish
+    image: plugins/docker
+    settings:
+      repo: savchenkoroman/go-api
+      tags:
+        - "latest"
+      username:
+        from_secret: DOCKER_USERNAME
+      password:
+        from_secret: DOCKER_PASSWORD
 
 volumes:
 - name: dockersock
