--- a/.drone.yml
+++ b/.drone.yml
@@ -7,9 +7,7 @@ steps:
     image: plugins/docker
     settings:
       repo: savchenkoroman/go-api
-      tags:
-        - "${VERSION}"
-        - "latest"
+      tags:  [ "${DRONE_COMMIT_SHA:0:8}","latest" ]
       username:
         from_secret: DOCKER_USERNAME
       password:
