--- a/.drone.yml
+++ b/.drone.yml
@@ -7,7 +7,7 @@ steps:
     image: plugins/docker
     settings:
       repo: savchenkoroman/go-api
-      tags:  [ "${VERSION}","latest" ]
+      tags:  [ "$${VERSION}","latest" ]
       username:
         from_secret: DOCKER_USERNAME
       password:
