--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   name: go-api-config
 data:
   .env: |
-    DB_HOST=postgres
+    DB_HOST=postgres.default.svc.cluster.local
     DB_PORT=5432
     DB_USER=postgres
     DB_PASSWORD=postgres
