--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -9,7 +9,7 @@ data:
     DB_PORT=5432
     DB_USER=postgres
     DB_PASSWORD=postgres
-    DB_NAME=go-api
+    DB_NAME=postgresdb
 
 ---
 apiVersion: apps/v1
