--- a/k8s/postgres-deployment.yaml
+++ b/k8s/postgres-deployment.yaml
@@ -38,7 +38,7 @@ metadata:
   labels:
     app: postgres
 data:
-  POSTGRES_DB: go-api
+  POSTGRES_DB: postgresdb
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: postgres
 
