--- a/.drone.yml
+++ b/.drone.yml
@@ -28,9 +28,9 @@ steps:
         from_secret: K8S_TOKEN
     commands:
       - kubectl apply -f k8s/postgres-deployment.yaml
-      - kubectl wait deploy/postgres --for condition=available
+      - kubectl wait deploy/postgres --for condition=available --timeout=120s
       - kubectl apply -f k8s/deployment.yaml
-      - kubectl wait deploy/go-api --for condition=available
+      - kubectl wait deploy/go-api --for condition=available --timeout=120s
 
 volumes:
 - name: dockersock
